--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title= content_for(:title) || "Todoapp"
+    %title= content_for(:title) || "Blog"
     %meta{content: "width=device-width,initial-scale=1", name: "viewport"}/
     %meta{content: "yes", name: "apple-mobile-web-app-capable"}/
     = csrf_meta_tags
@@ -12,9 +12,22 @@
     %link{href: "/icon.png", rel: "icon", type: "image/png"}/
     %link{href: "/icon.svg", rel: "icon", type: "image/svg+xml"}/
     %link{href: "/icon.png", rel: "apple-touch-icon"}/
+    %link{href: "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel: "stylesheet"}/
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
-    = javascript_importmap_tags
-  %body
-    %p.notice= notice
-    %p.alert= alert
+    = javascript_include_tag "application", "data-turbo-track": "reload", type: "module"
+    %header.header
+      .header__left
+        = link_to root_path, class: "logo" do
+          Board
+      .header__right
+        - if user_signed_in?
+          .user-icon
+            = image_tag "default-avatar.png", alt: "User", class: "avatar"
+            .dropdown
+              %ul
+                %li= link_to "プロフィール"
+                %li= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: 'delete' }
+        - else
+          = link_to "ログイン", new_user_session_path, class: "login-btn"
+
     = yield
