--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import 'header';
 @import 'common';
 @import 'show';
+@import 'flash';
 
 /* ---------- Theme Tokens ---------- */
 $bg:        #0f1216;
