--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,5 +29,9 @@
                 %li= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: 'delete' }
         - else
           = link_to "ログイン", new_user_session_path, class: "login-btn"
+    - if flash.present?
+      .flash
+        - flash.each do |key, value|
+          %div{class: key}= value
 
     = yield
